# linkscribe-backend

./: .dockerignore  API.py  Dockerfile  load_model.py  main.py  modelo.ipynb  prueba.py  pyproject.toml  requirements.txt  scrapper.py  scrapper_controller.py
