[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["andvarjo <afvj92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
bs4 = "^0.0.1"
pandas = "^2.1.1"
numpy = "^1.26.0"
torch = "^2.0.1"
scikit-learn = "^1.3.1"
deep-translator = "^1.11.4"
seaborn = "^0.13.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
fastapi-utils = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
